# ai4ose-lab1-dnoob

./: .gitignore  glossary.md
docs/: plan-2.11-16.md  progress.md  result-2.11-16.md
docs/ai-logs/: day2-ai-log-2026-02-12.md  day3-lab2-ai-log-2026-02-14.md  day4-lab3-ai-log-2026-02-15.md
lab1/: Cargo.toml  README.md  exercises.md
lab1/src/: main.rs
lab2/: Cargo.toml  README.md  exercises.md
lab2/src/: main.rs
lab3/: README.md  exercise.md
lab3/src/: main.rs  task.rs
lab4/: README.md
lab4/src/: main.rs  process.rs
solutions/lab1/: Cargo.toml
solutions/lab1/src/: main.rs
solutions/lab3/: main.rs  task.rs
solutions/lab4/: main.rs  process.rs
