[package]
name = "lab2-batch-system"
description = "Lab2: A batch processing OS with privilege levels, trap handling, and system calls."
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
riscv = "0.10.1"

tg-sbi = { version = "0.4.2-preview.1", features = ["nobios"] }
tg-linker = { version = "0.4.2-preview.1" }
tg-console = { version = "0.4.2-preview.1" }
tg-kernel-context = { version = "0.4.2-preview.1" }
tg-syscall = { version = "0.4.2-preview.1", features = ["kernel"] }

[build-dependencies]
tg-linker = { version = "0.4.2-preview.1" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
