[package]
name = "lab1-bare-metal-solution"
description = "Lab1: A minimal bare-metal application running in RISC-V S-mode."
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
tg-sbi = { version = "0.1.0-preview.1", features = ["nobios"] }
